--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,4 @@
-SUBDIRS = src
+ACLOCAL_AMFLAGS = -I m4
+EXTRA_DIST = m4/gnulib-cache.m4
+SUBDIRS = lib src
 TESTS = tests/badargs tests/onearg tests/twoarg tests/threearg
