internationalize this bitch.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,6 @@
 bin_PROGRAMS = dseq
 dseq_SOURCES = dseq.c
 AM_CPPFLAGS = -I$(top_srcdir)/lib -I$(top_builddir)/lib -Wall -Wextra
+localedir = $(datadir)/locale
+DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@
 LDADD = $(LIBINTL) $(top_builddir)/lib/libgnu.a
