--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 ACLOCAL_AMFLAGS = -I m4
 EXTRA_DIST = m4/gnulib-cache.m4
-SUBDIRS = lib src
+SUBDIRS = po lib src
 TESTS = tests/badargs tests/onearg tests/twoarg tests/threearg tests/i18nl10n
